<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.adi.startoonlabs.signinup.mvvm.User"/>

        <variable
            name="user"
            type="User" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/color_primary"
        tools:context=".dashboard.HomeActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{user.nameVisibility(), default=gone}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Aditya"
                android:text="@{user.userName}"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="@{user.phoneVisibility(), default=gone}"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_label"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+918208401763"
                android:text="@{user.phoneNumber}"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_out"
            android:layout_marginTop="10dp" />


    </LinearLayout>
</layout>